# Detection5Invasive

./: README.md  pyproject.toml
src/Detection5Invasive/: __init__.py  count.py  extract_gpx.py  main.py  select_pictures.py  split_pictures.py
